# basic-pokemon-stats

./: .gitignore  README.md
server/: .env.example  Cargo.toml
server/api/: Cargo.toml
server/api/src/: lib.rs  routes.rs
server/entity/: Cargo.toml
server/entity/src/: lib.rs  pokemon.rs  prelude.rs
server/migration/: Cargo.toml
server/migration/src/: lib.rs  m20230315_001452_initial.rs  m20230429_043512_timestamp.rs
server/src/: main.rs
