[package]
name = "api"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "api"
path = "src/lib.rs"

[dependencies]
actix-web = "4"
entity = { path = "../entity" }
log = "0.4.17"
migration = { path = "../migration" }
sea-orm = { version = "0.11.0", features = [
  "sqlx-mysql",
  "runtime-actix-native-tls",
  "macros",
] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"
